<resources>
    <string name="app_name">Simple MP</string>
    <string name="menuHome">Home</string>
    <string name="menuArtists">Artists</string>
    <string name="menuAlbums">Albums</string>
    <string name="menuPlaylists">Playlists</string>
    <string name="CurrentlyPlaying">Currently Playing</string>
    <string name="NextSongs">Next Songs</string>
    <string name="Theming">Theming</string>
    <string name="notificationChannelName">Playback</string>
    <string name="notificationChannelDescription">Simple MP Playback</string>
    <string name="NoSongSelected">No song selected</string>
    <string-array name="SettingsThemeMode">
        <item>System Theme</item>
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>
    <string-array name="SettingsThemeModeValues">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="SettingsDarkMode">
        <item>Color</item>
        <item>Oled</item>
    </string-array>
    <string-array name="SettingsDarkModeValues">
        <item>color</item>
        <item>oled</item>
    </string-array>
    <string name="Theme">Theme</string>
    <string name="ThemeMode">Theme Mode</string>
    <string name="emptyDescription">‎</string>
    <string name="threeDots">...</string>
    <string name="Sort">Sort</string>
    <string name="SearchSongsOrArtists">Search songs or artists</string>
    <string name="SearchArtists">Search artists</string>
    <string name="SearchAlbums">Search albums</string>
    <string name="SearchAlbumsOrArtists">Search albums or artists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previousSong">Previous Song</string>
    <string name="pauseSong">Pause Song</string>
    <string name="Songs">Songs</string>
    <string name="Audio">Audio</string>
    <string name="Albums">Albums</string>
    <string name="LimitAudioVolume">Limit Audio Volume</string>
    <string name="IfEnabledLimitsVolumeTo80">If enabled limits volume to 80%</string>
    <string name="Settings">Settings</string>
    <string name="SortByAscendent">Sort By Ascendent</string>
    <string name="SortByDescendent">Sort By Descendent</string>
    <string name="SortByArtist">Sort By Artist</string>
    <string name="SortByDate">Sort By Date</string>
    <string name="SortByRecent">Sort By Recent</string>
    <string name="SortByOldest">Sort By Oldest</string>
    <string name="title_activity_album">ActivityAlbum</string>
    <string name="Genres">Genres</string>
    <string name="YourPlaylists">Your playlists</string>
    <string name="About">About</string>
    <string name="CreatePlaylist">Create playlist</string>
    <string name="NoPlaylistsFound">No playlists found</string>
    <string name="AddToPlaylist">Add to playlist</string>
    <string name="ViewAlbum">View album</string>
    <string name="ViewArtist">View artist</string>
    <string name="Name">Name</string>
    <string name="InsertPlaylistName">Insert playlist name</string>
    <string name="Create">Create</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Undefined">Undifined</string>
    <string name="FillPlaylistName">Fill playlist name</string>
    <string name="SelectPlaylist">Select playlist</string>
    <string name="SongAlreadyAdded">Song already added</string>
    <string name="AddSongs">Add songs</string>
    <string name="SelectImage">Select image</string>
    <string name="EditPlaylist">Edit</string>
    <string name="DeletePlaylist">Delete playlist</string>
    <string name="ConfirmDeleteString">Are you sure you want to delete this playlist?</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="PlaylistName">Playlist Name</string>
    <string name="Save">Save</string>
    <string name="RestartToTakeEffect">Restart to take effect</string>
    <string name="Restart">Restart</string>
    <string name="FilterAudioBelow">Filter Audio Below</string>
    <string name="Seconds">Seconds</string>
    <string name="InsertTimeInSeconds">Insert time in seconds</string>
    <string name="OK">OK</string>
    <string name="OpenAboutPage">Open about page</string>
    <string name="Version">Version</string>
    <string name="AppVersion">0.1 BETA</string>
    <string name="ProjectSource">Project Source</string>
    <string name="GitHub">GitHub</string>
    <string name="GetTheProjectSourceInGitHub">Get the project source on GitHub</string>
    <string name="GitLab">GitLab</string>
    <string name="GetTheProjectSourceInGitLab">Get the project source on GitLab</string>
    <string name="WelcomeToSimpleMP">Welcome to SimpleMP</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="StoragePermission">Storage Permission</string>
    <string name="PleaseEnableStorage">Please enable storage permission in order to read the music files.</string>
    <string name="Grant">Grant</string>
    <string name="Granted">Granted</string>
    <string name="PleaseEnableStoragePermission">Please enable storage permission</string>
    <string name="Finish">Finish</string>
    <string name="SelectYourFavoriteColor">Select your favorite color</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="DarkModeString">False</string>
    <string name="ThisIsFeelingEmpty">This is feeling empty</string>
</resources>