<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/Theming">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/SettingsThemeMode"
            android:entryValues="@array/SettingsThemeModeValues"
            android:key="setting_themeMode"
            android:summary="%s"
            android:title="@string/ThemeMode" />
        <ListPreference
            android:defaultValue="color"
            android:entries="@array/SettingsDarkMode"
            android:entryValues="@array/SettingsDarkModeValues"
            android:key="setting_darkMode"
            android:summary="%s"
            android:title="@string/DarkMode"/>
        <Preference
            android:defaultValue="Blue"
            android:key="setting_theme"
            android:title="@string/Theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Audio">
        <Preference
            android:defaultValue="60"
            android:key="setting_filterAudio"
            app:title="@string/FilterAudioBelow" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="setting_limitAudioVolume"
            android:summary="@string/IfEnabledLimitsVolumeTo70"
            android:title="@string/LimitAudioVolume" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/About">
        <Preference
            android:key="setting_about"
            android:title="@string/About"
            app:summary="@string/OpenAboutPage" />
    </PreferenceCategory>
</PreferenceScreen>