<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ActivityQueue">

    <ImageButton
        android:id="@+id/ibCloseQueue_ActivityQueue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/emptyDescription"
        android:padding="6dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_stop_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCurrentSongAlbumArt_ActivityQueue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/emptyDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentlyPlaying_FragmenQueue"
        app:shapeAppearanceOverlay="@style/Custom_RoundImage" />

    <TextView
        android:id="@+id/tvCurrentlyPlaying_FragmenQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/CurrentlyPlaying"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibCloseQueue_ActivityQueue" />

    <TextView
        android:id="@+id/tvNextSongs_FragmenQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/NextSongs"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCurrentSongAlbumArt_ActivityQueue" />

    <TextView
        android:id="@+id/tvCurrentSongName_ActivityQueue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCurrentSongAlbumArt_ActivityQueue"
        app:layout_constraintTop_toTopOf="@+id/ivCurrentSongAlbumArt_ActivityQueue"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvCurrentSongArtist_ActivityQueue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:textColor="@color/subText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivCurrentSongAlbumArt_ActivityQueue"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentSongName_ActivityQueue" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNextSongs_FragmenQueue">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQueue_ActivityQueue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>